# my_blockchain

./: .gitignore  CMakeLists.txt  Launch_Parallel.cmd  Launch_Parallel_Verbose.cmd  README.md  compilescript.sh  main.cpp
Block/: Block.cpp  Block.h  CandidateBlock.cpp  CandidateBlock.h  MerkleTree.cpp  MerkleTree.h  Transaction.cpp  Transaction.h  User.cpp  User.h
Generators/: Miner.cpp  Miner.h  RNG.cpp  RNG.h  TransactionGenerator.cpp  TransactionGenerator.h  UserGenerator.cpp  UserGenerator.h  VerifyTransaction.cpp  VerifyTransaction.h
Generators/hashes/: Hash_Generator.cpp  Hash_Generator.h  Sha256.cpp
Serialization/: Serializer.cpp  Serializer.h
